Fix BaseVideoPlayer and AboutUI Math.clamp issues