@@ -242,7 +242,7 @@ public class AboutUI {
     }
 
     private static double clamp(double value, double min, double max) {
-        return Math.max(min, Math.min(max, value));
+        return Math.clamp(value, min, max);
     }
 
     private static String resolveReleaseSummary() {
